[package]
name = "quest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "3.2.17"
features = ["derive"]

[dependencies.serde]
version = "1.0.143"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.83"

[dependencies.chrono]
version = "0.4.22"

[dependencies.dirs]
version = "4.0.0"

[dependencies.whoami]
version = "1.2.1"